--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src="button.js"></script>
 <script>
 	if (hasItem("Eye of the Prophet")){
-		document.getElementsByClassName("button-of-the-day-text")[0].textContent="Button of Tomorrow"
+		document.getElementsByClassName("button-of-the-day-text")[0].textContent="The Prophet is Dead"
 		document.getElementsByClassName("button-text1")[0].textContent=getTomorrowButton()[0]
 		document.getElementsByClassName("button-text2")[0].textContent=getTomorrowButton()[1]
 	} else {
